force-app/main/default/objects/Purchase_Order_Line__c/fields/Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Factor__c</fullName>
    <description>Snapshot of conversion factor (internal units per vendor unit).</description>
    <label>Conversion Factor</label>
    <precision>16</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>