force-app/main/default/objects/Purchase_Order_Line__c/fields/Converted_Internal_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Converted_Internal_Quantity__c</fullName>
    <description>Quantity in internal base units (Vendor Quantity * Conversion Factor).</description>
    <label>Converted Internal Quantity</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>