force-app/main/default/objects/Purchase_Order_Line__c/fields/Cost_Per_Vendor_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Vendor_Unit__c</fullName>
    <description>Cost per vendor unit at the time of order (snapshot).</description>
    <label>Vendor Unit Cost</label>
    <precision>16</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>