force-app/main/default/objects/Purchase_Order_Line__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the line item (copied from product or vendor description).</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>