force-app/main/default/objects/Purchase_Order_Line__c/fields/Internal_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Internal_Quantity__c</fullName>
    <label>Internal Quantity</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>