force-app/main/default/objects/Purchase_Order_Line__c/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName>
    <description>Extended cost for this line (Vendor Quantity * Cost Per Vendor Unit).</description>
    <formula>Vendor_Quantity__c * Cost_Per_Vendor_Unit__c</formula>
    <label>Line Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>