force-app/main/default/objects/Purchase_Order_Line__c/fields/Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Product_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Inventory Product Item that will be received into.</description>
    <label>Product Item</label>
    <referenceTo>ProductItem</referenceTo>
    <relationshipLabel>Purchase Order Lines</relationshipLabel>
    <relationshipName>Product_Item_Purchase_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>