force-app/main/default/objects/Purchase_Order_Line__c/fields/Product_Sourcing_Option__c.field-meta.xml
<CustomField>
    <fullName>Product_Sourcing_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Unit specific Vendor Product configuration used for this line.</description>
    <label>Product Sourcing Option</label>
    <referenceTo>Product_Sourcing_Option__c</referenceTo>
    <relationshipLabel>Purchase Order Lines</relationshipLabel>
    <relationshipName>Product_Sourcing_Option_PO_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>