force-app/main/default/objects/Purchase_Order_Line__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>