force-app/main/default/objects/Purchase_Order_Line__c/fields/Received_Quantity_Internal__c.field-meta.xml
<CustomField>
    <fullName>Received_Quantity_Internal__c</fullName>
    <description>Total quantity received in internal units.</description>
    <label>Received Quantity (Internal)</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>