force-app/main/default/objects/Purchase_Order_Line__c/fields/Vendor_Product__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vendor product ordered on this line.</description>
    <label>Vendor Product</label>
    <referenceTo>Vendor_Product__c</referenceTo>
    <relationshipLabel>Purchase Order Lines</relationshipLabel>
    <relationshipName>Vendor_Product_Purchase_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>