force-app/main/default/objects/Purchase_Order_Line__c/fields/Vendor_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Quantity__c</fullName>
    <description>Quantity in vendor units ordered on this line.</description>
    <label>Vendor Quantity</label>
    <precision>16</precision>
    <scale>3</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>